<resources>
    <string name="app_name">Music</string>
    <string name="music_name">MusicName</string>
    <string name="music_author">Author</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="play_order">PlayOrder</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="check">check</string>
    <string name="timing">定时</string>
    <string name="music_time">00:00</string>
    <string name="half_an_hour">30分钟</string>
    <string name="one_hour">1小时</string>
    <string name="one_and_a_half_hours">1.5小时</string>
    <string name="diy_hour">自定义</string>
</resources>
