<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/listLayout">

    <RelativeLayout
       android:padding="10dp"
        android:id="@+id/actionBar"
        android:background="#33808080"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/deleteBtn"
            android:contentDescription="@string/delete"
            android:background="@drawable/delete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/backBtn"
            android:contentDescription="@string/back"
            android:background="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/checkBtn"
            android:layout_toLeftOf="@+id/checkBtn"
            android:background="@drawable/cancel"
            android:id="@+id/cancelBtn"
            android:contentDescription="@string/cancel" />

        <ImageButton
            android:id="@+id/addBtn"
            android:contentDescription="@string/add"
            android:background="@drawable/increase"
            android:layout_toStartOf="@+id/deleteBtn"
            android:layout_toLeftOf="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:visibility="gone"
            android:id="@+id/checkBtn"
            android:background="@drawable/check"
            android:contentDescription="@string/check"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/actionBar"
        android:id="@+id/listRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>